more html files

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home/welcome</title>
+    <title>About Me</title>
 </head>
-
 <body>
     <main>
-        <h1>Introductory Summary</h1>
-
+        <h1>Awards and Achievements</h1>
+        <h1>Hobbies</h1>
+        <h1>Post Secondary Plan</h1>
     </main>
 </body>
-
 </html>
