--- a/aboutMe.html
+++ b/aboutMe.html
@@ -7,9 +7,22 @@
 </head>
 <body>
     <main>
-        <h1>Awards and Achievements</h1>
-        <h1>Hobbies</h1>
-        <h1>Post Secondary Plan</h1>
+        <section class="AA">
+            <h1>Awards and Achievements</h1>
+        <p>//Pending.//</p>
+        </section>
+        
+        <section class="HOB">
+            <h1>Hobbies</h1>
+            <!-- music, art, gaming, and cinema enjoyment -->
+            <h2>Music</h2>
+            <p> I love the rock music! And the raps n' jazzes. Hoewever, I'm not particularly adequete in those areas of musical genre.</p>
+        </section>
+        
+        <section  class="PSP">
+            <h1>Post Secondary Plan</h1>
+            <p>I plan on going to college as a something blah blah blah text is cool to press the keys yes no...</p>
+        </section>
     </main>
 </body>
 </html>
