--- a/home.html
+++ b/home.html
@@ -18,6 +18,16 @@
         <a href="content.html">Not content.</a>
         <p id="small"> * represents a word that is related to the grouping of letters that say: prestige.</p>
     </main>
+
+    <footer>
+        <a href="">About Me</a>
+        <a href="">Contact</a>
+        <a href="">The Content</a>
+        <a href="">Inspirations</a>
+        <a href="">Portfolio</a>
+        <a href="">Resume</a>
+        <a href=""></a>
+    </footer>
 </body>
 
 </html>
