--- a/resume.html
+++ b/resume.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Resume</title>
 </head>
 <body>
-    
+    <main>
+        <h1>Resume</h1>
+        <p>This is a homecooked, hand-forged resumption designed by me personally.</p>
+            <section class="theFunny">
+                <a href="pdfs/Complete-Resume - Gavin Stetson.pdf">
+                    <img src="images/LMLOLO.png" alt="Visualization of my resume as an interactive image, linked to the pdf file.">
+                    <figcaption>YOU MAD? CLICK HERE!</figcaption>
+                </a>
+            </section>
+    </main>
 </body>
 </html>
