--- a/content.html
+++ b/content.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="stylin.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Jersey+10+Charted&display=swap" rel="stylesheet">
@@ -10,6 +11,6 @@
     
 </head>
 <body>
-    <p class="fire">Oh yeah.</p>
+    <h1 class="fire">Oh yeah.</h1>
 </body>
 </html>
