Page rework, details added

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -16,13 +16,23 @@
             <h1>Hobbies</h1>
             <!-- music, art, gaming, and cinema enjoyment -->
             <h2>Music</h2>
-            <p> I love the rock music! And the raps n' jazzes. Hoewever, I'm not particularly adequete in those areas of musical genre.</p>
+            <p> I love-a the rock music! And the raps n' jazzes. Hoewever, I'm not particularly adequete in those areas of musical genre.</p>
         </section>
         
         <section  class="PSP">
             <h1>Post Secondary Plan</h1>
             <p>I plan on going to college as a something blah blah blah text is cool to press the keys yes no...</p>
         </section>
+
+        <footer>
+            <a href="aboutMe.html">About Me</a>
+            <a href="contact.html">Contact</a>
+            <a href="content.html">The Content</a>
+            <a href="Inspirations.html">Inspirations</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="resume.html">Resume</a>
+            <a href=""></a>
+        </footer>
     </main>
 </body>
 </html>
