--- a/content.html
+++ b/content.html
@@ -11,6 +11,18 @@
     
 </head>
 <body>
-    <h1 class="fire">Oh yeah.</h1>
+    <main>
+        <h1 class="fire">Oh yeah.</h1>
+
+        <footer>
+            <a href="aboutMe.html">About Me</a>
+            <a href="contact.html">Contact</a>
+            <a href="content.html">The Content</a>
+            <a href="Inspirations.html">Inspirations</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="resume.html">Resume</a>
+            <a href=""></a>
+        </footer>
+    </main>
 </body>
 </html>
