--- a/home.html
+++ b/home.html
@@ -15,17 +15,17 @@
         <h1>Introductory Summary</h1>
         <p>Hello! My name is Gavin Stetson, and I welcome you to my humble nook in the internet. In this website, you can visit details of pragmatic interactions, various achievements, and prestigious* creations.</p>
         <h2>Content</h2>
-        <a href="content.html">Not content.</a>
-        <p id="small"> * represents a word that is related to the grouping of letters that say: prestige.</p>
+        <a href="content.html">Click here to find the <em>CONTENT</em></a>
+        <p class="small"> * represents a word that is related to the grouping of letters that say: prestige.</p>
     </main>
 
     <footer>
-        <a href="">About Me</a>
-        <a href="">Contact</a>
-        <a href="">The Content</a>
-        <a href="">Inspirations</a>
-        <a href="">Portfolio</a>
-        <a href="">Resume</a>
+        <a href="aboutMe.html">About Me</a>
+        <a href="contact.html">Contact</a>
+        <a href="content.html">The Content</a>
+        <a href="Inspirations.html">Inspirations</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="resume.html">Resume</a>
         <a href=""></a>
     </footer>
 </body>
