--- a/resume.html
+++ b/resume.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylin.css">
     <title>Resume</title>
 </head>
 <body>
@@ -11,10 +12,20 @@
         <p>This is a homecooked, hand-forged resumption designed by me personally.</p>
             <section class="theFunny">
                 <a href="pdfs/Complete-Resume - Gavin Stetson.pdf">
-                    <img src="images/LMLOLO.png" alt="Visualization of my resume as an interactive image, linked to the pdf file.">
-                    <figcaption>YOU MAD? CLICK HERE!</figcaption>
+                    <img src="images/LMLOLO.png" alt="Visualization of my resume as an interactive image, linked to my pdf file.">
+                    <figcaption class="madness">YOU MAD? CLICK HERE!</figcaption>
                 </a>
             </section>
+
+            <footer>
+                <a href="aboutMe.html">About Me</a>
+                <a href="contact.html">Contact</a>
+                <a href="content.html">The Content</a>
+                <a href="Inspirations.html">Inspirations</a>
+                <a href="portfolio.html">Portfolio</a>
+                <a href="resume.html">Resume</a>
+                <a href=""></a>
+            </footer>
     </main>
 </body>
 </html>
