--- a/Inspirations.html
+++ b/Inspirations.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inspirations</title>
+    
 </head>
 <body>
-    
+    <main>
+        <section></section>
+
+        <footer>
+            <a href="aboutMe.html">About Me</a>
+            <a href="contact.html">Contact</a>
+            <a href="content.html">The Content</a>
+            <a href="Inspirations.html">Inspirations</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="resume.html">Resume</a>
+            <a href=""></a>
+        </footer>
+    </main>
 </body>
 </html>
