Content changes, setting pages up for further development

--- a/Inspirations.html
+++ b/Inspirations.html
@@ -7,18 +7,30 @@
     
 </head>
 <body>
-    <main>
-        <section></section>
+    <header>
+        <a href="aboutMe.html">About Me</a>
+        <a href="contact.html">Contact</a>
+        <a href="content.html">The Content</a>
+        <a href="Inspirations.html">Inspirations</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="resume.html">Resume</a>
+        <a href=""></a>
+    </header>
 
-        <footer>
-            <a href="aboutMe.html">About Me</a>
-            <a href="contact.html">Contact</a>
-            <a href="content.html">The Content</a>
-            <a href="Inspirations.html">Inspirations</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="resume.html">Resume</a>
-            <a href=""></a>
-        </footer>
+    <main>
+        <section>
+            <p>When it comes to creation, everything comes from a source. These sources root to the making of something original in its own right. Here are some things that inspire me.</p>
+            <h1>Aesthetic</h1>
+            <p>Genrally, the look I felt to align with was the look of 2000s styled art, such as the images shown in the carousel.</p>
+
+
+            <!-- Light jazz music fades in,  -->
+            <h1>Cinematography</h1>
+            <p>The way a thing is filmed is integral ot the way it is percieved. People subconciously pick up on expressions, actions, and form that are exercised by actors in films and media. These details can be easily noticed if one decided to pay attention to them. As an example, we can look at a scene from the 2014 film, <em>Whiplash</em>. Spoiler warning for the movie, of course. The scene I wish to focus on is the climax of the movie where the main character, Andrew Neiman is humiliated in front of a proffessional jazz festival performance by his former teacher when Neiman is instructed to practice the wrong sheet music. 
+                Now, how does this relate to my inspirations? It doesn't. Not at all. </p>
+
+            <h1>Musical Taste</h1>
+        </section>
     </main>
 </body>
 </html>
