--- a/aboutMe.html
+++ b/aboutMe.html
@@ -6,6 +6,16 @@
     <title>About Me</title>
 </head>
 <body>
+    <header>
+        <a href="aboutMe.html">About Me</a>
+        <a href="contact.html">Contact</a>
+        <a href="content.html">The Content</a>
+        <a href="Inspirations.html">Inspirations</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="resume.html">Resume</a>
+        <a href=""></a>
+    </header>
+
     <main>
         <section class="AA">
             <h1>Awards and Achievements</h1>
@@ -21,18 +31,10 @@
         
         <section  class="PSP">
             <h1>Post Secondary Plan</h1>
-            <p>I plan on going to college as a something blah blah blah text is cool to press the keys yes no...</p>
-        </section>
+            <p>I plan on going to Clovis Community College for prerequisites, and majoring in a tech-oriented industry. Alternative routes are also being thought up, as to generate more concise ideas for potential futures. One of these options are going to Union Pacific University in Anguin California, for its learniing environment and nursing program. Yet another path lies in multimedia. Making and editing videos and media online. </p>
 
-        <footer>
-            <a href="aboutMe.html">About Me</a>
-            <a href="contact.html">Contact</a>
-            <a href="content.html">The Content</a>
-            <a href="Inspirations.html">Inspirations</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="resume.html">Resume</a>
-            <a href=""></a>
-        </footer>
+            
+        </section>
     </main>
 </body>
 </html>
