--- a/contact.html
+++ b/contact.html
@@ -5,27 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<!-- Thank you note
-- Job/Volunteer opportunities you are interested in hearing about
-- Professional Social Links
-- Button or link to send an email to you.--
- -->
 <body>
     <main>
+        <header>
+            <a href="aboutMe.html">About Me</a>
+            <a href="contact.html">Contact</a>
+            <a href="content.html">The Content</a>
+            <a href="Inspirations.html">Inspirations</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="resume.html">Resume</a>
+            <a href=""></a>
+        </header>
+
         <h1>Thank you for visiting!</h1>
         <h3>If you haven't visited the other pages, you should give them a shot. They are all pretty, pretty, pretty good.I hope you have a generally good day, thanks for playing my website.</h3>
         <a href="mailto:owen.gaffney23@student.cart.org">If you have any questions or wish to contact me, this is somebody else's email.</a>
         <a href="mailto:gavin.stetson23@student.cart.org">And this is my email (NOT!)</a>
     </main>
-    
-    <footer>
-        <a href="aboutMe.html">About Me</a>
-        <a href="contact.html">Contact</a>
-        <a href="content.html">The Content</a>
-        <a href="Inspirations.html">Inspirations</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="resume.html">Resume</a>
-        <a href=""></a>
-    </footer>
 </body>
 </html>
