--- a/content.html
+++ b/content.html
@@ -11,18 +11,20 @@
     
 </head>
 <body>
+    <header>
+        <a href="aboutMe.html">About Me</a>
+        <a href="contact.html">Contact</a>
+        <a href="content.html">The Content</a>
+        <a href="Inspirations.html">Inspirations</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="resume.html">Resume</a>
+        <a href=""></a>
+    </header>
+    
     <main>
         <h1 class="fire">Oh yeah.</h1>
-
-        <footer>
-            <a href="aboutMe.html">About Me</a>
-            <a href="contact.html">Contact</a>
-            <a href="content.html">The Content</a>
-            <a href="Inspirations.html">Inspirations</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="resume.html">Resume</a>
-            <a href=""></a>
-        </footer>
+        <p>Congratulations, you have found the content! Please ask contact the creator of the website for a simplistically detailed reward.</p>
+        <p>Please enjoy this fantastic image carosoul </p>
     </main>
 </body>
 </html>
