--- a/home.html
+++ b/home.html
@@ -11,15 +11,7 @@
 </head>
 
 <body>
-    <main>
-        <h1>Introductory Summary</h1>
-        <p>Hello! My name is Gavin Stetson, and I welcome you to my humble nook in the internet. In this website, you can visit details of pragmatic interactions, various achievements, and prestigious* creations.</p>
-        <h2>Content</h2>
-        <a href="content.html">Click here to find the <em>CONTENT</em></a>
-        <p class="small"> * represents a word that is related to the grouping of letters that say: prestige.</p>
-    </main>
-
-    <footer>
+    <header>
         <a href="aboutMe.html">About Me</a>
         <a href="contact.html">Contact</a>
         <a href="content.html">The Content</a>
@@ -27,7 +19,17 @@
         <a href="portfolio.html">Portfolio</a>
         <a href="resume.html">Resume</a>
         <a href=""></a>
-    </footer>
+    </header>
+    <main>
+        <h1>Introductory Summary</h1>
+        <p>Hello! My name is Gavin Stetson, and I welcome you to my humble nook in the internet. In this website, you can visit details of pragmatic interactions, various achievements, and prestigious* creations. I am a current student at Clovis East High School graduating in 2025. I am in search of a part time job where I can grow with much success and provide help to the company I work for. Synchronously, I am a student at the Center for Advanced Research and Technology (CART) in the Web Applications lab to explore my curiosity in coding</p>
+
+        <h2>Content</h2>
+        <a href="content.html">Click here to find the <em>CONTENT</em></a>
+        <p class="small"> * represents a word that is related to the grouping of letters that say: prestige.</p>
+    </main>
+
+    <!-- do not do this. This is bad. -->
 </body>
 
 </html>
