--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,15 @@
     <title>Portfolio</title>
 </head>
 <body>
-
+    <header>
+        <a href="aboutMe.html">About Me</a>
+        <a href="contact.html">Contact</a>
+        <a href="content.html">The Content</a>
+        <a href="Inspirations.html">Inspirations</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="resume.html">Resume</a>
+        <a href=""></a>
+    </header>
 
     <!-- Overview/intro page with links to each section and separate pages for each section:
 Web / Programming
