--- a/resume.html
+++ b/resume.html
@@ -7,6 +7,16 @@
     <title>Resume</title>
 </head>
 <body>
+    <header>
+        <a href="aboutMe.html">About Me</a>
+        <a href="contact.html">Contact</a>
+        <a href="content.html">The Content</a>
+        <a href="Inspirations.html">Inspirations</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="resume.html">Resume</a>
+        <a href=""></a>
+    </header>
+
     <main>
         <h1>Resume</h1>
         <p>This is a homecooked, hand-forged resumption designed by me personally.</p>
@@ -16,16 +26,6 @@
                     <figcaption class="madness">YOU MAD? CLICK HERE!</figcaption>
                 </a>
             </section>
-
-            <footer>
-                <a href="aboutMe.html">About Me</a>
-                <a href="contact.html">Contact</a>
-                <a href="content.html">The Content</a>
-                <a href="Inspirations.html">Inspirations</a>
-                <a href="portfolio.html">Portfolio</a>
-                <a href="resume.html">Resume</a>
-                <a href=""></a>
-            </footer>
     </main>
 </body>
 </html>
