Main HTML Completion
Onto the CSS

--- a/Inspirations.html
+++ b/Inspirations.html
@@ -10,26 +10,31 @@
     <header>
         <a href="aboutMe.html">About Me</a>
         <a href="contact.html">Contact</a>
-        <a href="content.html">The Content</a>
         <a href="Inspirations.html">Inspirations</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="resume.html">Resume</a>
-        <a href=""></a>
+        <a href="home.html">Let's Go Back Home</a>
     </header>
 
     <main>
         <section>
+            <h1>Inspirations</h1>
+
             <p>When it comes to creation, everything comes from a source. These sources root to the making of something original in its own right. Here are some things that inspire me.</p>
-            <h1>Aesthetic</h1>
+            <h2>Aesthetic</h2>
             <p>Genrally, the look I felt to align with was the look of 2000s styled art, such as the images shown in the carousel.</p>
+            <img src="images/B.png" alt="The red letter B of course!">
 
 
             <!-- Light jazz music fades in,  -->
-            <h1>Cinematography</h1>
+            <h2>Cinematography</h2>
             <p>The way a thing is filmed is integral ot the way it is percieved. People subconciously pick up on expressions, actions, and form that are exercised by actors in films and media. These details can be easily noticed if one decided to pay attention to them. As an example, we can look at a scene from the 2014 film, <em>Whiplash</em>. Spoiler warning for the movie, of course. The scene I wish to focus on is the climax of the movie where the main character, Andrew Neiman is humiliated in front of a proffessional jazz festival performance by his former teacher when Neiman is instructed to practice the wrong sheet music. 
-                Now, how does this relate to my inspirations? It doesn't. Not at all. </p>
+                Now, how does this relate to my inspirations? It doesn't. Not at all. Except for the fact that it is very cool, and that appeals to me. </p>
+                <img src="images/placehold.png" alt="">
 
-            <h1>Musical Taste</h1>
+            <h2>Musical Taste</h2>
+            <p>Since I spend most of my freetime with music on in the background, it's safe to say that it has an influential effect on my thought process. This could also be reflected in the sense that my thought process affects the music I surround myself with, but who really cares about any of that. </p>
+            <img src="images/placehold.png" alt="">
         </section>
     </main>
 </body>
