--- a/content.html
+++ b/content.html
@@ -1,30 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="stylin.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Jersey+10+Charted&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jersey+10+Charted&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Content</title>
-    
+
 </head>
+
 <body>
     <header>
         <a href="aboutMe.html">About Me</a>
         <a href="contact.html">Contact</a>
-        <a href="content.html">The Content</a>
         <a href="Inspirations.html">Inspirations</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="resume.html">Resume</a>
-        <a href=""></a>
+        <a href="home.html">Let's Go Back Home</a>
     </header>
-    
+
     <main>
         <h1 class="fire">Oh yeah.</h1>
-        <p>Congratulations, you have found the content! Please ask contact the creator of the website for a simplistically detailed reward.</p>
+        <p>Congratulations, you have found the content! Please ask contact the creator of the website for a
+            simplistically detailed reward.</p>
         <p>Please enjoy this fantastic image carosoul </p>
+
+        <section class="carouselOne">
+            <section class="C1-sizing">
+                <ul class="C1-list">
+                    <li class="C1-slide">
+                        <img src="images/placehold.png" alt="">
+                    </li>
+                    <li class="C1-slide">
+                        <img src="images/placehold.png" alt="">
+                    </li>
+                    <li class="C1-slide">
+                        <img src="images/placehold.png" alt="">
+                    </li>
+                </ul>
+            </section>
+        </section>
     </main>
 </body>
+
 </html>
