--- a/playlist.html
+++ b/playlist.html
@@ -13,10 +13,14 @@
         <a href="Inspirations.html">Inspirations</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="resume.html">Resume</a>
-        <a href=""></a>
+        <a href="home.html">Let's Go Back Home</a>
     </header>
     <main>
-        
+        <h1>Playlists</h1>
+        <section>
+            <h2>And the creative twist they play on music.</h2>
+            <p>I have a tendency to manipulate my music in the greatest ways possible, I do this by putting them into playlists and fitting songs in the best rhythmic order I can find. Some of these can be publically found on the youtube account Grimestucken. Now that guy is a cool fella. </p>
+        </section>
     </main>
 </body>
 </html>
