--- a/portfolio.html
+++ b/portfolio.html
@@ -9,11 +9,10 @@
     <header>
         <a href="aboutMe.html">About Me</a>
         <a href="contact.html">Contact</a>
-        <a href="content.html">The Content</a>
         <a href="Inspirations.html">Inspirations</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="resume.html">Resume</a>
-        <a href=""></a>
+        <a href="home.html">Let's Go Back Home</a>
     </header>
 
     <!-- Overview/intro page with links to each section and separate pages for each section:
@@ -40,7 +39,7 @@ One or more of: Art, Drawings, Photos, Models, Music, Other Class/Personal work.
             <button class="gtar" href="guitar.html">Guitar Recordings</button>
             <h2></h2>
 
-            <button class="cmc" href="playlist.html">Conceptual Mixtape Creation</button>
+            <a class="cmc" href="playlist.html">Conceptual Mixtape Creation</a>
             <h2></h2>
         </section>
         
