--- a/resume.html
+++ b/resume.html
@@ -9,12 +9,10 @@
 <body>
     <header>
         <a href="aboutMe.html">About Me</a>
-        <a href="contact.html">Contact</a>
-        <a href="content.html">The Content</a>
         <a href="Inspirations.html">Inspirations</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="resume.html">Resume</a>
-        <a href=""></a>
+        <a href="home.html">Let's Go Back Home</a>
     </header>
 
     <main>
