--- a/aboutMe.html
+++ b/aboutMe.html
@@ -9,11 +9,10 @@
     <header>
         <a href="aboutMe.html">About Me</a>
         <a href="contact.html">Contact</a>
-        <a href="content.html">The Content</a>
         <a href="Inspirations.html">Inspirations</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="resume.html">Resume</a>
-        <a href=""></a>
+        <a href="home.html">Let's Go Back Home</a>
     </header>
 
     <main>
@@ -27,11 +26,21 @@
             <!-- music, art, gaming, and cinema enjoyment -->
             <h2>Music</h2>
             <p> I love-a the rock music! And the raps n' jazzes. Hoewever, I'm not particularly adequete in those areas of musical genre.</p>
+            <img src="images/music-melody-musical-note-music-779f13-1024.jpg" alt="CreativeCommons sourced music notes">
+
+            <h2>Art</h2>
+            <p>I have a interest in art made online, mainly sourcing from the website Newgrounds. Some users that come to mind are JamesLee, Chupabara, Ennuikal, Zals, LeviRamirez, and JohnnyUtah to name a few. I like analyzing a piece and thinking about a creator's design process.</p>
+            <img src="images/placehold.png" alt="Placeholder image for better things">
+
+            <h2>Videogames</h2>
+            <p>The no-brainer when it comes to personal intersts. My taste in games stems from original storytelling and explosive gameplay. If there are ragdoll physics it's already a high ranking masterpiece of media.</p>
+            <img src="images/placehold.png" alt="Placeholder image for better things">
         </section>
         
         <section  class="PSP">
             <h1>Post Secondary Plan</h1>
-            <p>I plan on going to Clovis Community College for prerequisites, and majoring in a tech-oriented industry. Alternative routes are also being thought up, as to generate more concise ideas for potential futures. One of these options are going to Union Pacific University in Anguin California, for its learniing environment and nursing program. Yet another path lies in multimedia. Making and editing videos and media online. </p>
+            <p>I plan on going to Clovis Community College for prerequisites, and majoring in a tech-oriented industry. Alternative routes are also being thought of, as to generate more concise ideas for potential futures. One of these options are going to Union Pacific University in Anguin, California for its learniing environment and nursing program. Yet another path lies in multimedia. Making and editing videos and media online. </p>
+            <img src="images/unnamed.jpg" alt="School crossing sign at an angle. ">
 
             
         </section>
