--- a/contact.html
+++ b/contact.html
@@ -10,17 +10,16 @@
         <header>
             <a href="aboutMe.html">About Me</a>
             <a href="contact.html">Contact</a>
-            <a href="content.html">The Content</a>
             <a href="Inspirations.html">Inspirations</a>
             <a href="portfolio.html">Portfolio</a>
             <a href="resume.html">Resume</a>
-            <a href=""></a>
+            <a href="home.html">Let's Go Back Home</a>
         </header>
 
         <h1>Thank you for visiting!</h1>
         <h3>If you haven't visited the other pages, you should give them a shot. They are all pretty, pretty, pretty good.I hope you have a generally good day, thanks for playing my website.</h3>
-        <a href="mailto:owen.gaffney23@student.cart.org">If you have any questions or wish to contact me, this is somebody else's email.</a>
-        <a href="mailto:gavin.stetson23@student.cart.org">And this is my email (NOT!)</a>
+        <a href="mailto:owen.gaffney23@student.cart.org">If you have any questions or wish to contact me, this is completely somebody else's email.</a>
+        <a href="mailto:gavin.stetson23@student.cart.org">And this is my email, just kidding (NOT!)</a>
     </main>
 </body>
 </html>
