--- a/home.html
+++ b/home.html
@@ -14,11 +14,10 @@
     <header>
         <a href="aboutMe.html">About Me</a>
         <a href="contact.html">Contact</a>
-        <a href="content.html">The Content</a>
         <a href="Inspirations.html">Inspirations</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="resume.html">Resume</a>
-        <a href=""></a>
+        <!-- <a href=""></a> -->
     </header>
     <main>
         <h1>Introductory Summary</h1>
