--- a/content.html
+++ b/content.html
@@ -8,23 +8,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Jersey+10+Charted&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Content</title>
+    <title>CONTENT</title>
 
 </head>
 
 <body>
     <header>
-        <a href="aboutMe.html">About Me</a>
-        <a href="contact.html">Contact</a>
-        <a href="Inspirations.html">Inspirations</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="resume.html">Resume</a>
-        <a href="home.html">Let's Go Back Home</a>
+        <a href="aboutMe.html">ABOUT ME</a>
+        <a href="contact.html">CONTACT</a>
+        <a href="Inspirations.html">INSPIRATIONS</a>
+        <a href="portfolio.html">PORTFOLIO</a>
+        <a href="resume.html">RESUME</a>
+        <a href="home.html">GO BACK HOME</a>
     </header>
 
     <main>
         <h1 class="fire">Oh yeah.</h1>
-        <p>Congratulations, you have found the content! Please ask contact the creator of the website for a
+        <p>Congratulations, you have found the CONTENT! Please ask contact the creator of the website for a
             simplistically detailed reward.</p>
         <p>Please enjoy this fantastic image carosoul </p>
 
