--- a/guitar.html
+++ b/guitar.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <header>
-        <a href="aboutMe.html">About Me</a>
-        <a href="contact.html">Contact</a>
-        <a href="Inspirations.html">Inspirations</a>
-        <a href="portfolio.html">Portfolio</a>
+        <a href="aboutMe.html">ABOUT ME </a>
+        <a href="contact.html">CONTACT</a>
+        <a href="Inspirations.html">INSPIRATIONS</a>
+        <a href="portfolio.html">PORTFOLIO</a>
         <a href="resume.html">Resume</a>
-        <a href="home.html">Let's Go Back Home</a>
+        <a href="home.html">GO BACK HOME</a>
     </header>
     
     <main>
