--- a/playlist.html
+++ b/playlist.html
@@ -7,13 +7,13 @@
 </head>
 <body>
     <header>
-        <a href="aboutMe.html">About Me</a>
-        <a href="contact.html">Contact</a>
-        <a href="content.html">The Content</a>
-        <a href="Inspirations.html">Inspirations</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="resume.html">Resume</a>
-        <a href="home.html">Let's Go Back Home</a>
+        <a href="aboutMe.html">ABOUT ME</a>
+        <a href="contact.html">CONTACT</a>
+        <a href="content.html">CONTENT</a>
+        <a href="Inspirations.html">INSPIRATIONS</a>
+        <a href="portfolio.html">PORTFOLIO</a>
+        <a href="resume.html">RESUME</a>
+        <a href="home.html">GO BACK HOME</a>
     </header>
     <main>
         <h1>Playlists</h1>
