--- a/aboutMe.html
+++ b/aboutMe.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <title>ABOUT ME</title>
+    <link rel="stylesheet" href="stylin.css">
 </head>
 <body>
-    <header>
-        <a href="aboutMe.html">About Me</a>
-        <a href="contact.html">Contact</a>
-        <a href="Inspirations.html">Inspirations</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="resume.html">Resume</a>
-        <a href="home.html">Let's Go Back Home</a>
+    <header class="header">
+        <a href="aboutMe.html">ABOUT ME</a>
+        <a href="contact.html">CONTACT</a>
+        <a href="Inspirations.html">INSPIRATIONS</a>
+        <a href="portfolio.html">PORTFOLIO</a>
+        <a href="resume.html">RESUME</a>
+        <a href="home.html">GO BACK HOME</a>
     </header>
 
-    <main>
+    <main id="mcolor">
         <section class="AA">
             <h1>Awards and Achievements</h1>
         <p>//Pending.//</p>
@@ -24,9 +25,10 @@
         <section class="HOB">
             <h1>Hobbies</h1>
             <!-- music, art, gaming, and cinema enjoyment -->
-            <h2>Music</h2>
+            <section class="music">
+                <h2>Music</h2>
             <p> I love-a the rock music! And the raps n' jazzes. Hoewever, I'm not particularly adequete in those areas of musical genre.</p>
-            <img src="images/music-melody-musical-note-music-779f13-1024.jpg" alt="CreativeCommons sourced music notes">
+            </section>
 
             <h2>Art</h2>
             <p>I have a interest in art made online, mainly sourcing from the website Newgrounds. Some users that come to mind are JamesLee, Chupabara, Ennuikal, Zals, LeviRamirez, and JohnnyUtah to name a few. I like analyzing a piece and thinking about a creator's design process.</p>
