--- a/contact.html
+++ b/contact.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CONTACT</title>
 </head>
 <body>
     <main>
         <header>
-            <a href="aboutMe.html">About Me</a>
-            <a href="contact.html">Contact</a>
-            <a href="Inspirations.html">Inspirations</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="resume.html">Resume</a>
-            <a href="home.html">Let's Go Back Home</a>
+            <a href="aboutMe.html">ABOUT ME</a>
+            <a href="contact.html">CONTACT</a>
+            <a href="Inspirations.html">INSPIRATIONS</a>
+            <a href="portfolio.html">PORTFOLIO</a>
+            <a href="resume.html">RESUME</a>
+            <a href="home.html">GO BACK HOME</a>
         </header>
 
         <h1>Thank you for visiting!</h1>
