--- a/home.html
+++ b/home.html
@@ -12,11 +12,11 @@
 
 <body>
     <header>
-        <a href="aboutMe.html">About Me</a>
-        <a href="contact.html">Contact</a>
-        <a href="Inspirations.html">Inspirations</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="resume.html">Resume</a>
+        <a href="aboutMe.html">ABOUT ME</a>
+        <a href="contact.html">CONTACT</a>
+        <a href="Inspirations.html">INSPIRATIONS</a>
+        <a href="portfolio.html">PORTFOLIO</a>
+        <a href="resume.html">RESUME</a>
         <!-- <a href=""></a> -->
     </header>
     <main>
