--- a/aboutMe.html
+++ b/aboutMe.html
@@ -17,20 +17,23 @@
     </header>
 
     <main id="mcolor">
+        <section class="sideR">
+          <h1>About Me</h1>  
+        </section>
         <section class="AA">
-            <h1>Awards and Achievements</h1>
-        <p>//Pending.//</p>
+            <h2>Awards and Achievements</h2>
+        <p>When it comes to the abilities of my own personal achievements,  I have a garnered donnc</p>
         </section>
         
         <section class="HOB">
-            <h1>Hobbies</h1>
+            <h2>Hobbies</h2>
             <!-- music, art, gaming, and cinema enjoyment -->
             <section class="music">
                 <h2>Music</h2>
             <p> I love-a the rock music! And the raps n' jazzes. Hoewever, I'm not particularly adequete in those areas of musical genre.</p>
             </section>
 
-            <h2>Art</h2>
+            <h class=2>Art</h2>
             <p>I have a interest in art made online, mainly sourcing from the website Newgrounds. Some users that come to mind are JamesLee, Chupabara, Ennuikal, Zals, LeviRamirez, and JohnnyUtah to name a few. I like analyzing a piece and thinking about a creator's design process.</p>
             <img src="images/placehold.png" alt="Placeholder image for better things">
 
@@ -40,7 +43,7 @@
         </section>
         
         <section  class="PSP">
-            <h1>Post Secondary Plan</h1>
+            <h2>Post Secondary Plan</h2>
             <p>I plan on going to Clovis Community College for prerequisites, and majoring in a tech-oriented industry. Alternative routes are also being thought of, as to generate more concise ideas for potential futures. One of these options are going to Union Pacific University in Anguin, California for its learniing environment and nursing program. Yet another path lies in multimedia. Making and editing videos and media online. </p>
             <img src="images/unnamed.jpg" alt="School crossing sign at an angle. ">
 
