Site structure via CSS

--- a/Inspirations.html
+++ b/Inspirations.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inspirations</title>
-    
+    <link rel="stylesheet" href="stylin.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <a href="aboutMe.html">ABOUT ME</a>
         <a href="contact.html">CONTACT</a>
         <a href="Inspirations.html">INSPIRATIONS</a>
@@ -17,7 +17,7 @@
     </header>
 
     <main>
-        <section>
+        <section class="mainBG">
             <h1>Inspirations</h1>
 
             <p>When it comes to creation, everything comes from a source. These sources root to the making of something original in its own right. Here are some things that inspire me.</p>
