--- a/home.html
+++ b/home.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Jersey+10+Charted&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jersey+10+Charted&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home/welcome</title>
@@ -19,16 +16,19 @@
         <a href="resume.html">RESUME</a>
         <!-- <a href=""></a> -->
     </header>
-    <main>
+    <main class="mainBG">
         <h1>Introductory Summary</h1>
-        <p>Hello! My name is Gavin Stetson, and I welcome you to my humble nook in the internet. In this website, you can visit details of pragmatic interactions, various achievements, and prestigious* creations. I am a current student at Clovis East High School graduating in 2025. I am in search of a part time job where I can grow with much success and provide help to the company I work for. Synchronously, I am a student at the Center for Advanced Research and Technology (CART) in the Web Applications lab to explore my curiosity in coding</p>
+        <p>Hello! My name is Gavin Stetson, and I welcome you to my humble nook in the internet. In this website, you
+            can visit details of pragmatic interactions, various achievements, and prestigious* creations. I am a
+            current student at Clovis East High School graduating in 2025. I am in search of a part time job where I can
+            grow with much success and provide help to the company I work for. Synchronously, I am a student at the
+            Center for Advanced Research and Technology (CART) in the Web Applications lab to explore my curiosity in
+            coding</p>
 
         <h2>Content</h2>
         <a href="content.html">Click here to find the <em>CONTENT</em></a>
         <p class="small"> * represents a word that is related to the grouping of letters that say: prestige.</p>
     </main>
-
-    <!-- do not do this. This is bad. -->
 </body>
 
 </html>
