--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CONTACT</title>
+    <link rel="stylesheet" href="stylin.css">
 </head>
-<body>
+<body class="mainBG">
     <main>
-        <header>
+        <header class="header">
             <a href="aboutMe.html">ABOUT ME</a>
             <a href="contact.html">CONTACT</a>
             <a href="Inspirations.html">INSPIRATIONS</a>
@@ -16,10 +17,12 @@
             <a href="home.html">GO BACK HOME</a>
         </header>
 
-        <h1>Thank you for visiting!</h1>
+        <section class="holdEm">
+            <h1>Thank you for visiting!</h1>
         <h3>If you haven't visited the other pages, you should give them a shot. They are all pretty, pretty, pretty good.I hope you have a generally good day, thanks for playing my website.</h3>
-        <a href="mailto:owen.gaffney23@student.cart.org">If you have any questions or wish to contact me, this is completely somebody else's email.</a>
-        <a href="mailto:gavin.stetson23@student.cart.org">And this is my email, just kidding (NOT!)</a>
+        <a href="mailto:gavin.stetson23@student.cart.org">If you have any questions or wish to contact me, this is my CART email.</a> <br><br>
+        <a href="mailto:gvnstet06@gmail.com">And this is my personal email, just kidding (NOT!)</a>
+        </section>
     </main>
 </body>
 </html>
