--- a/Inspirations.html
+++ b/Inspirations.html
@@ -26,7 +26,7 @@
             <img src="images/B.png" alt="The red letter B of course!">
 
 
-            <!-- Light jazz music fades in,  -->
+            <!-- LightJazz  -->
             <h2>Cinematography</h2>
             <p>The way a thing is filmed is integral ot the way it is percieved. People subconciously pick up on expressions, actions, and form that are exercised by actors in films and media. These details can be easily noticed if one decided to pay attention to them. As an example, we can look at a scene from the 2014 film, <em>Whiplash</em>. Spoiler warning for the movie, of course. The scene I wish to focus on is the climax of the movie where the main character, Andrew Neiman is humiliated in front of a proffessional jazz festival performance by his former teacher when Neiman is instructed to practice the wrong sheet music. 
                 Now, how does this relate to my inspirations? It doesn't. Not at all. Except for the fact that it is very cool, and that appeals to me. </p>
