Showcase commit: Making the visual appearance of the sight presentably apparent.

--- a/Inspirations.html
+++ b/Inspirations.html
@@ -9,10 +9,10 @@
 <body>
     <header class="header">
         <a href="aboutMe.html">ABOUT ME</a>
-        <a href="contact.html">CONTACT</a>
         <a href="Inspirations.html">INSPIRATIONS</a>
         <a href="portfolio.html">PORTFOLIO</a>
         <a href="resume.html">RESUME</a>
+        <a href="contact.html">CONTACT</a>
         <a href="home.html">GO BACK HOME</a>
     </header>
 
@@ -28,9 +28,9 @@
 
             <!-- LightJazz  -->
             <h2>Cinematography</h2>
-            <p>The way a thing is filmed is integral ot the way it is percieved. People subconciously pick up on expressions, actions, and form that are exercised by actors in films and media. These details can be easily noticed if one decided to pay attention to them. As an example, we can look at a scene from the 2014 film, <em>Whiplash</em>. Spoiler warning for the movie, of course. The scene I wish to focus on is the climax of the movie where the main character, Andrew Neiman is humiliated in front of a proffessional jazz festival performance by his former teacher when Neiman is instructed to practice the wrong sheet music. 
-                Now, how does this relate to my inspirations? It doesn't. Not at all. Except for the fact that it is very cool, and that appeals to me. </p>
-                <img src="images/placehold.png" alt="">
+            <p>The way a thing is filmed is integral ot the way it is percieved. People subconciously pick up on expressions, actions, and form that are exercised by actors in films and media. These details can be easily noticed if one decided to pay attention to them. As an example, we can look at a scene from the 2014 film, <em>Whiplash</em>. Spoiler warning for the movie, of course. The scene I wish to focus on is the climax of the movie where the main character, Andrew Neiman is humiliated in front of a proffessional jazz festival performance by his former teacher when Neiman is sabatoged into practicing the wrong sheet music. Instead of giving up and giving in, he walks back and plays the beginning of a song he <em>had</em> practiced without the approval of his antagonistic techer, amazing him an displaying the best jazz drumming in cinema. 
+                Now, how does this relate to my inspirations? It doesn't. Not at all. Except for the fact that it is very cool, and that it appeals to me. Not to mention the amazing visuals paired by the tense musical montages throughout the movie as a whole.</p>
+                <img src="images/fletcher_by_novanim_de4i71q-375w.jpg" alt="Artistic interpretation of Fletcher from the film Whiplash">
 
             <h2>Musical Taste</h2>
             <p>Since I spend most of my freetime with music on in the background, it's safe to say that it has an influential effect on my thought process. This could also be reflected in the sense that my thought process affects the music I surround myself with, but who really cares about any of that. </p>
