--- a/guitar.html
+++ b/guitar.html
@@ -6,12 +6,12 @@
     <title>Guitar</title>
 </head>
 <body>
-    <header>
-        <a href="aboutMe.html">ABOUT ME </a>
-        <a href="contact.html">CONTACT</a>
+    <header class="header">
+        <a href="aboutMe.html">ABOUT ME</a>
         <a href="Inspirations.html">INSPIRATIONS</a>
         <a href="portfolio.html">PORTFOLIO</a>
-        <a href="resume.html">Resume</a>
+        <a href="resume.html">RESUME</a>
+        <a href="contact.html">CONTACT</a>
         <a href="home.html">GO BACK HOME</a>
     </header>
     
