--- a/playlist.html
+++ b/playlist.html
@@ -6,13 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <a href="aboutMe.html">ABOUT ME</a>
-        <a href="contact.html">CONTACT</a>
-        <a href="content.html">CONTENT</a>
         <a href="Inspirations.html">INSPIRATIONS</a>
         <a href="portfolio.html">PORTFOLIO</a>
         <a href="resume.html">RESUME</a>
+        <a href="contact.html">CONTACT</a>
         <a href="home.html">GO BACK HOME</a>
     </header>
     <main>
