--- a/portfolio.html
+++ b/portfolio.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylin.css">
     <title>Portfolio</title>
 </head>
 <body>
-    <header>
-        <a href="aboutMe.html">About Me</a>
-        <a href="contact.html">Contact</a>
-        <a href="Inspirations.html">Inspirations</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="resume.html">Resume</a>
-        <a href="home.html">Let's Go Back Home</a>
+    <header class="header">
+        <a href="aboutMe.html">ABOUT ME</a>
+        <a href="Inspirations.html">INSPIRATIONS</a>
+        <a href="portfolio.html">PORTFOLIO</a>
+        <a href="resume.html">RESUME</a>
+        <a href="contact.html">CONTACT</a>
+        <a href="home.html">GO BACK HOME</a>
     </header>
 
     <!-- Overview/intro page with links to each section and separate pages for each section:
@@ -26,16 +27,16 @@ One or more of: Art, Drawings, Photos, Models, Music, Other Class/Personal work.
         </section>
 
         <section>
-            <h1>Artistic projects</h1>
+            <h2>Artistic projects</h2>
             <p>These projects stem from personal motivation and a combination of assigned work in Art 1.</p>
         </section>
         
         <section>
-            <h1>Creative Writing</h1>
+            <h2>Creative Writing</h2>
         </section>
         
         <section>
-            <h1>Music</h1>
+            <h2>Music</h2>
             <button class="gtar" href="guitar.html">Guitar Recordings</button>
             <h2></h2>
 
