--- a/resume.html
+++ b/resume.html
@@ -7,12 +7,13 @@
     <title>Resume</title>
 </head>
 <body>
-    <header>
-        <a href="aboutMe.html">About Me</a>
-        <a href="Inspirations.html">Inspirations</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="resume.html">Resume</a>
-        <a href="home.html">Let's Go Back Home</a>
+    <header class="header">
+        <a href="aboutMe.html">ABOUT ME</a>
+        <a href="Inspirations.html">INSPIRATIONS</a>
+        <a href="portfolio.html">PORTFOLIO</a>
+        <a href="resume.html">RESUME</a>
+        <a href="contact.html">CONTACT</a>
+        <a href="home.html">GO BACK HOME</a>
     </header>
 
     <main>
