Progress to netlify
it is taking a million years to deploy, maybe this needs to be updated.

--- a/content.html
+++ b/content.html
@@ -19,7 +19,7 @@
         <a href="portfolio.html">PORTFOLIO</a>
         <a href="resume.html">RESUME</a>
         <a href="contact.html">CONTACT</a>
-        <a href="home.html">GO BACK HOME</a>
+        <a href="home.html">GO HOME</a>
     </header>
 
     <main>
