--- a/home.html
+++ b/home.html
@@ -2,6 +2,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jersey+10+Charted&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="stylin.css"> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home/welcome</title>
@@ -14,7 +15,7 @@
         <a href="portfolio.html">PORTFOLIO</a>
         <a href="resume.html">RESUME</a>
         <a href="contact.html">CONTACT</a>
-        <!-- <a href=""></a> -->
+        <!-- <a href="">content </a> -->
     </header>
     <main class="mainBG">
         <h1>Introductory Summary</h1>
@@ -27,7 +28,7 @@
 
         <h2>Content</h2>
         <a href="content.html">Click here to find the <em>CONTENT</em></a>
-        <p class="small"> * represents a word that is related to the grouping of letters that say: prestige.</p>
+        <p class="small"> * Representative of things that may relate closer to content that of which is substantially commonplace.</p>
     </main>
 </body>
 
