--- a/portfolio.html
+++ b/portfolio.html
@@ -13,26 +13,39 @@
         <a href="portfolio.html">PORTFOLIO</a>
         <a href="resume.html">RESUME</a>
         <a href="contact.html">CONTACT</a>
-        <a href="home.html">GO BACK HOME</a>
+        <a href="home.html">GO HOME</a>
     </header>
 
     <!-- Overview/intro page with links to each section and separate pages for each section:
 Web / Programming
 Writing 
 One or more of: Art, Drawings, Photos, Models, Music, Other Class/Personal work. -->
-    <main>
+    <main class="mainBG">
         <section>
             <h1>Portfolio</h1>
             <p>This is the part of the place that is forwardly mentioned as the space of stored achievements. In short, these sections highlight the various categories of my skills and achievements. </p>
         </section>
 
         <section>
+            <h2>Coding Work: </h2>
+            <p>Coding projects mainly took place in the </p>
+        </section>
+
+        <section>
             <h2>Artistic projects</h2>
             <p>These projects stem from personal motivation and a combination of assigned work in Art 1.</p>
+            <h3>Paper art prject:</h3>
+            <p>
+                This art piece was created by cutting the negative space into and from a square black index card that represents the colors that refect eachother in terms of shape of The understandable vocational indredients that source for the creation of  the piece itself.  
+            </p>
         </section>
         
         <section>
             <h2>Creative Writing</h2>
+            <h3></h3>
+            <p>
+                Jurassic APA Essay
+            </p>
         </section>
         
         <section>
