--- a/resume.html
+++ b/resume.html
@@ -13,12 +13,14 @@
         <a href="portfolio.html">PORTFOLIO</a>
         <a href="resume.html">RESUME</a>
         <a href="contact.html">CONTACT</a>
-        <a href="home.html">GO BACK HOME</a>
+        <a href="home.html">GO HOME</a>
     </header>
 
-    <main>
-        <h1>Resume</h1>
+    <main class="mainBG">
+        <section class="resume-heading">
+            <h1>Resume</h1>
         <p>This is a homecooked, hand-forged resumption designed by me personally.</p>
+        </section>
             <section class="theFunny">
                 <a href="pdfs/Complete-Resume - Gavin Stetson.pdf">
                     <img src="images/LMLOLO.png" alt="Visualization of my resume as an interactive image, linked to my pdf file.">
