--- a/Inspirations.html
+++ b/Inspirations.html
@@ -13,7 +13,7 @@
         <a href="portfolio.html">PORTFOLIO</a>
         <a href="resume.html">RESUME</a>
         <a href="contact.html">CONTACT</a>
-        <a href="home.html">GO BACK HOME</a>
+        <a href="home.html">GO HOME</a>
     </header>
 
     <main>
@@ -23,7 +23,7 @@
             <p>When it comes to creation, everything comes from a source. These sources root to the making of something original in its own right. Here are some things that inspire me.</p>
             <h2>Aesthetic</h2>
             <p>Genrally, the look I felt to align with was the look of 2000s styled art, such as the images shown in the carousel.</p>
-            <img src="images/B.png" alt="The red letter B of course!">
+
 
 
             <!-- LightJazz  -->
