--- a/contact.html
+++ b/contact.html
@@ -14,11 +14,11 @@
             <a href="portfolio.html">PORTFOLIO</a>
             <a href="resume.html">RESUME</a>
             <a href="contact.html">CONTACT</a>
-            <a href="home.html">GO BACK HOME</a>
+            <a href="home.html">GO HOME</a>
         </header>
 
         <section class="holdEm">
-            <h1>Thank you for visiting!</h1>
+            <h1>Thank you ver much for visiting!</h1>
         <h3>If you haven't visited the other pages, you should give them a shot. They are all pretty, pretty, pretty good.I hope you have a generally good day, thanks for playing my website.</h3>
         <a href="mailto:gavin.stetson23@student.cart.org">If you have any questions or wish to contact me, this is my CART email.</a> <br><br>
         <a href="mailto:gvnstet06@gmail.com">And this is my personal email, just kidding (NOT!)</a>
