--- a/resume.html
+++ b/resume.html
@@ -28,5 +28,9 @@
                 </a>
             </section>
     </main>
+    <footer class="foots">
+        <p>Gavin Stetson</p>
+        <p>2024</p>
+    </footer>
 </body>
 </html>
