Turned off css of homepage, return after. Slight alterations also made

--- a/content.html
+++ b/content.html
@@ -26,6 +26,11 @@
         <h1 class="fire">Oh yeah.</h1>
         <p>Congratulations, you have found the CONTENT! Please ask contact the creator of the website for a
             simplistically detailed reward.</p>
+
+
+            <p class="the-c">Welcome to the Content!</p>
+
+
         <p>Please enjoy this <em>fantastically</em> pending image carosoul </p>
 
         
