--- a/contact.html
+++ b/contact.html
@@ -18,11 +18,13 @@
         </header>
 
         <section class="holdEm">
-            <h1>Thank you ver much for visiting!</h1>
-        <h3>If you haven't visited the other pages, you should give them a shot. They are all pretty, pretty, pretty good.I hope you have a generally good day, thanks for playing my website.</h3>
-        <a href="mailto:gavin.stetson23@student.cart.org">If you have any questions or wish to contact me, this is my CART email.</a> <br><br>
-        <a href="mailto:gvnstet06@gmail.com">And this is my personal email, just kidding (NOT!)</a>
-        </section>
+            <h1>Thank you for visiting!</h1>
+        <h3>If you haven't visited the other pages, you should give them a shot. They are all pretty, pretty, pretty good.I hope you have a fantastic day, thanks for playing my website.</h3>
+        <a href="mailto:gavin.stetson23@student.cart.org">If you have any questions or wish to contact me, this is my CART email:</a> <br><br>
+        <p>gavin.stetson23@student.cart.org</p>
+        <a href="mailto:gvnstet06@gmail.com">And this is my personal email:</a>
+        <p>gvnstet06@gmail.com</p>
+    </section>
     </main>
 </body>
 </html>
